<resources>
    <string name="app_name">Information_Technology </string>
    <string name="first_yr">First Year</string>
    <string name="second_yr">Second Year</string>
    <string name="third_yr">Third Year</string>
    <string name="fourth_yr">Fourth Year</string>
    <string name="fifth_yr">Fifth Year</string>
    <string name="sixth_yr">Sixth Year</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TnfoTech Department</string>
    <string name="nav_header_subtitle">.@infotechmdy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">#Credits</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">TU Mandalay</string>
    <string name="menu_slideshow">IT Department</string>
    <string name="menu_tools">communicate</string>
    <string name="menu_share">Contact us</string>

    <string name="copyRight">Copyright © 2019 (Chin Gyi). All rights reserved.
        Powered by Information Technology Department.</string>
</resources>
