<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Fragment.MainFragment">
<!--<LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->
<!--    <TextView-->
<!--            android:text="TextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/agri_id"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/agri_name" app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_marginStart="8dp" android:layout_marginTop="100dp"/>-->
<!--    <TextView-->
<!--            android:text="TextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="17dp"-->
<!--            android:id="@+id/description_one"-->
<!--            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
<!--            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/agri_id"-->
<!--            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>-->
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="match_parent">



    <LinearLayout
                  android:clipToPadding="false"
                  android:gravity="center"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/first_year"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                android:layout_margin="8dp"
                android:layout_marginRight="0dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:src="@drawable/no_bg_blue_it_logo"
                        android:layout_width="80dp"
                        android:layout_height="120dp"/>

                <TextView
                        android:layout_marginTop="6dp"
                        android:text="@string/first_yr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/second_year"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:src="@drawable/no_bg_blue_it_logo"
                        android:layout_width="80dp"
                        android:layout_height="120dp"/>

                <TextView
                        android:layout_marginTop="6dp"
                        android:text="@string/second_yr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
        <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/third_year"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/no_bg_blue_it_logo"
                            android:layout_width="80dp"
                            android:layout_height="120dp"/>

                    <TextView
                            android:layout_marginTop="6dp"
                            android:text="@string/third_yr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/fourth_year"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">


                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/no_bg_blue_it_logo"
                            android:layout_width="80dp"
                            android:layout_height="120dp"/>

                    <TextView
                            android:layout_marginTop="6dp"
                            android:text="@string/fourth_yr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/fifth_year"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">


            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:src="@drawable/no_bg_blue_it_logo"
                        android:layout_width="80dp"
                        android:layout_height="120dp"/>

                <TextView
                        android:layout_marginTop="6dp"
                        android:text="@string/fifth_yr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/sixth_year"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">


            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:src="@drawable/no_bg_blue_it_logo"
                        android:layout_width="80dp"
                        android:layout_height="120dp"/>

                <TextView
                        android:layout_marginTop="6dp"
                        android:text="@string/sixth_yr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/common_google_signin_btn_text_light_pressed"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    </LinearLayout>
</ScrollView>